# aoc2022

./: .gitignore  LICENSE
aoc-template/: Cargo.toml  cargo-generate.toml
aoc-template/src/: main.rs
day01/: Cargo.toml
day01-refactor/src/: main.rs
day01/src/: main.rs
day02/: Cargo.toml
day02-refactor/: Cargo.toml
day02-refactor/src/: main.rs
day02/src/: main.rs
day03/: Cargo.toml
day03/src/: main.rs
day04/: Cargo.toml
day04/src/: main.rs
day05/: Cargo.toml
day05/src/: main.rs
day06/: Cargo.toml
day06/src/: main.rs
day07/: Cargo.toml
day07/src/: main.rs
day08/: Cargo.toml  README.md
day08/src/: main.rs
day09/: Cargo.toml
day09/src/: main.rs
day10/: Cargo.toml
day10/src/: main.rs
utils/: Cargo.toml
utils/src/: lib.rs
