[package]
name = "day04"
version = "0.1.0"
authors = ["cmeinco <trent@appsec.wtf>"]
edition = "2018"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
owo-colors = "3.5.0"
loggy = "^0.5.2"
log = "^0.4.17"
env_logger = "0.9.0"